--- a/style.css
+++ b/style.css
@@ -477,7 +477,7 @@ button:hover {
 
 @media(max-width: 821px) {
     .popup {
-        height: calc(100vh + 200px);
+        height: 100%;
         width: 70%;
         right: 0;
         padding: 40% 5% 0 5%;
@@ -492,7 +492,7 @@ button:hover {
     .popup-info {
         display: block;
         position: absolute;
-        bottom: 226px;
+        bottom: 13px;
         right: calc(50% - 120px);
     }
 
