--- a/style.css
+++ b/style.css
@@ -26,7 +26,10 @@ p {
 button:hover {
     cursor: pointer;
 }
-
+.open-menu{
+    overflow-y: hidden;
+    height: 100vh;
+}
 .popup {
     position: fixed;
     z-index: 2;
