--- a/style.css
+++ b/style.css
@@ -480,7 +480,7 @@ button:hover {
 
 @media(max-width: 821px) {
     .popup {
-        height: calc(100vh + 10vh);
+        height: calc(100vh + 200px);
         width: 70%;
         right: 0;
         padding: 40% 5% 0 5%;
