--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     font-size: 16px;
     line-height: 19px;
     color: #FFFFFF;
+    height: 100%;
 }
 
 * {
@@ -495,7 +496,7 @@ button:hover {
     .popup-info {
         display: block;
         position: absolute;
-        bottom: 224px;
+        bottom: 246px;
         right: calc(50% - 123px);
     }
 
